Fix dropdown styling on iOS

--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -118,6 +118,7 @@ header {
 
   select {
     appearance: none;
+    -webkit-appearance: none;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
